[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custom_iterable_dataset"
version = "0.1.0"
description = "A custom iterable dataset wrapper for use with Hugging Face's SFTTrainer."
authors = [
    { name = "Parsa Bakhtiari", email = "spacenavard1@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "transformers",
]